[gd_scene load_steps=5 format=3 uid="uid://dqn51mw7stk6t"]

[ext_resource type="PackedScene" uid="uid://dc4d0ps8auti3" path="res://Assets/Nodes/Collectibles/icon.tscn" id="1_m5fwm"]
[ext_resource type="Script" uid="uid://bypp18rb72ln0" path="res://Assets/Nodes/Collectibles/extra_life.gd" id="1_nt0b2"]
[ext_resource type="FontFile" uid="uid://h8berclpli6i" path="res://Assets/Fonts/SyneMono-Regular.ttf" id="3_r72xl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_42qgl"]

[node name="ExtraLife" type="Node3D"]
script = ExtResource("1_nt0b2")

[node name="ExtraLifeIcon" parent="." instance=ExtResource("1_m5fwm")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)
modulate = Color(1, 1, 1, 0.6392157)

[node name="PickupArea3D2" type="Area3D" parent="ExtraLifeIcon"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExtraLifeIcon/PickupArea3D2"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
shape = SubResource("SphereShape3D_42qgl")

[node name="Label" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.0336914, 0.90319824, 0)
billboard = 1
modulate = Color(1, 1, 1, 0.9019608)
text = "+Extra Tries"
font = ExtResource("3_r72xl")
font_size = 96

[connection signal="body_entered" from="ExtraLifeIcon/PickupArea3D2" to="." method="_on_pickup_area_3d_2_body_entered"]
